<resources>
    <string name="app_name">Shopping-List-Application</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="lists">Lists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="i_already_have_an_account">I already have an Account!</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="list_name">List Name</string>
    <string name="thing_to_add_to_the_list">Things to add to the List</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="teste">Edit</string>
    <string name="erro1">Logged IN Successfully</string>
    <string name="erro2">The password Inserted is wrong</string>
    <string name="erro3">The Email is wrong or doesn\'t exist</string>
    <string name="erro4">Unknown ERROR</string>
    <string name="create">Create</string>
    <string name="project_made_with_love_by">Project made with Love by:</string>
    <string name="alexandre_fernandes_202100895_ndavid_anast_cio_202200843_ntom_s_mendes_202200859" translatable="false">Alexandre Fernandes - 202100895\nDavid Anastácio - 202200843\nTomás Mendes -202200859</string>
    <string name="url" translatable="false">URL</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

</resources>