<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background_image">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/primary"
        android:clickable="true"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_drawable"
            android:ems="10"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="@string/email"
            android:padding="10dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_drawable"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:padding="10dp"
            android:password="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@color/secundary"
                android:text="@string/register"
                android:textColorHighlight="#0099ff"
                android:textColorLink="#0099ff"
                app:strokeColor="@color/accent1"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/secundary"
                android:text="@string/login"
                android:textColorHighlight="#0099ff"
                android:textColorLink="#0099ff"
                app:strokeColor="@color/accent1"
                app:strokeWidth="1dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/gradient_backgroud"
        android:gravity="center"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="15"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>